[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Mateus Barbosa <barbosamat16@gmail.com>"]
repository = "https://github.com/FrostPrice/hello-wasm"
description = "A sample project made with Web Assembly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
